<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Unofficial Rap Genius</string>
    <string name="action_settings">Settings</string>
    <string name="default_search">Enter artist song here</string>
    <string name="action_search">Search</string>
    <string name="action_favorite">Add/Remove to favorites</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_load_home">Load Home</string>
    <string name="summary_load_home">Loads Editors\' Picks and Popular Songs.</string>
    <string name="title_cache_lyrics">Cache Lyrics</string>
    <string name="summary_cache_lyrics">Saves lyrics for faster loading and offline use.\nAndroid will automatically clear cached files if the system is running low on space.\n*Does not save explanations.</string>
    <string name="title_remove_favorites">Remove All Favorites</string>
    <string name="summary_remove_favorites">Remove all favorites.</string>
    <string name="dialog_remove_favorites">Are you sure you want to remove all favorites?</string>
    <string name="title_donate">Donate</string>
    <string name="summary_donate">Donate money.</string>
    <string name="title_clear_cache">Clear Cache</string>
    <string name="summary_clear_cache">Clear all saved lyrics from storage.</string>
    <string name="dialog_clear_cache">Are you sure you want to clear the cache?</string>

    <string-array name="navigation_array">
        <item>HOME</item>
        <item>FAVORITES</item>
        <item>SETTINGS</item>
    </string-array>

    <string name="title_activity_more_songs">More Songs</string>
    <string name="close_drawer">Close drawer.</string>
    <string name="open_drawer">Open drawer.</string>
    <string name="title_activity_explanation">Explanation</string>
    <string name="favsSearch">Enter favorited song</string>
    <string name="title_favs_search">Enable Favorites Search</string>
    <string name="summary_favs_search">Shows a search bar for favorited songs. Appears after 10 songs are added.</string>
    <string name="drawer_image">Drawer Image</string>
    
    <!-- Error messages -->
    <string name="error_cache_loading">Error loading lyrics.</string>
    <string name="error_reload">Try reloading the song.</string>
    <string name="error_network_check">A problem occurred while getting information about your network status.</string>
    <string name="error_no_internet">No internet connection found.</string>

    <!-- Default text -->
    <string name="default_favorite">Favorited Songs</string>
    <string name="default_home">Loading home is disabled in settings.</string>
    
</resources>