<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="Performance" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_load_home"
            android:summary="@string/summary_load_home"
            android:title="@string/title_load_home" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_cache_lyrics"
            android:summary="@string/summary_cache_lyrics"
            android:title="@string/title_cache_lyrics" />

        <com.trasselback.rapgenius.OverridedDialogPreference
            android:dialogIcon="@android:drawable/ic_dialog_alert"
            android:dialogMessage="@string/dialog_clear_cache"
            android:key="pref_key_clear_cache"
            android:negativeButtonText="Cancel"
            android:positiveButtonText="Ok"
            android:summary="@string/summary_clear_cache"
            android:title="@string/title_clear_cache" />
        <com.trasselback.rapgenius.OverridedDialogPreference
            android:dialogIcon="@android:drawable/ic_dialog_alert"
            android:dialogMessage="@string/dialog_remove_favorites"
            android:key="pref_key_remove_favorites"
            android:negativeButtonText="Cancel"
            android:positiveButtonText="Ok"
            android:summary="@string/summary_remove_favorites"
            android:title="@string/title_remove_favorites" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Customization" >
        <ListPreference
            android:defaultValue="22"
            android:dialogTitle="Text Sizes"
            android:entries="@array/text_sizes_entries"
            android:entryValues="@array/text_sizes_entry_values"
            android:key="pref_key_text_size"
            android:title="Text Size" />

        <PreferenceScreen
            android:persistent="false"
            android:title="Text Colors" >
            <ListPreference
                android:defaultValue="22"
                android:dialogTitle="Color for default text."
                android:entries="@array/text_sizes_entries"
                android:entryValues="@array/text_sizes_entry_values"
                android:key="pref_key_text_size"
                android:title="Default Text" />
            <ListPreference
                android:defaultValue="22"
                android:dialogTitle="Color for lyrics explained by the community."
                android:entries="@array/text_sizes_entries"
                android:entryValues="@array/text_sizes_entry_values"
                android:key="pref_key_text_size"
                android:title="Explained Lyrics" />
            <ListPreference
                android:defaultValue="22"
                android:dialogTitle="Color for lyrics explained by the artist."
                android:entries="@array/text_sizes_entries"
                android:entryValues="@array/text_sizes_entry_values"
                android:key="pref_key_text_size"
                android:title="Artist Explained Lyrics" />
            <ListPreference
                android:defaultValue="22"
                android:dialogTitle="Color for titles."
                android:entries="@array/text_sizes_entries"
                android:entryValues="@array/text_sizes_entry_values"
                android:key="pref_key_text_size"
                android:title="Title Text" />
        </PreferenceScreen>

        <ListPreference
            android:defaultValue="22"
            android:dialogTitle="Text Sizes"
            android:entries="@array/text_sizes_entries"
            android:entryValues="@array/text_sizes_entry_values"
            android:key="pref_key_text_size"
            android:title="Background Color" />
        <ListPreference
            android:defaultValue="22"
            android:dialogTitle="Text Sizes"
            android:entries="@array/text_sizes_entries"
            android:entryValues="@array/text_sizes_entry_values"
            android:key="pref_key_text_size"
            android:title="Action Bar Color" />
    </PreferenceCategory>
    <PreferenceCategory android:title="About" >
        <Preference
            android:summary="@string/summary_donate"
            android:title="@string/title_donate" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.redcross.org/charitable-donations" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>